<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FDFAEA">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:background="@drawable/movie" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/team_name"
            android:fontFamily="@font/postnobillsjaffna_extrabold"
            android:textSize="40sp"
            android:textColor="#922A23"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:text="@string/slogan"
            android:textSize="18sp"
            android:textColor="#922A23"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#ffffff">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="18dp"
                android:text="@string/username"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/ediUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:maxLines="1"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="18dp"
                android:text="@string/password"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/ediPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:maxLines="1"
                android:textSize="18sp"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/btn_sign_in"
                android:textSize="17sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="@drawable/btn_create"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/string_1"
                android:textSize="16sp"
                android:clickable="true"
                android:onClick="forgot_password"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:text="@string/string_2"
                    android:textSize="16sp"
                    android:gravity="right"/>

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:text="@string/string_3"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:onClick="sign_up"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>