<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FDFAEA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/string_0"
            android:fontFamily="@font/postnobillsjaffna_extrabold"
            android:textSize="40sp"
            android:textColor="#922A23"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@drawable/btn_signup_choice"
                android:text="@string/admin_choice"
                android:textStyle="bold"
                android:fontFamily="@font/postnobillsjaffna_extrabold"
                android:textSize="40sp"
                android:textColor="#922A23" />

            <Button
                android:id="@+id/btnUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@drawable/btn_signup_choice"
                android:text="@string/user_choice"
                android:textStyle="bold"
                android:fontFamily="@font/postnobillsjaffna_extrabold"
                android:textSize="40sp"
                android:textColor="#922A23" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>